--- a/SDL_Pathfinding/SDL_Pathfinding/SDL_Pathfinding.vcxproj.filters
+++ b/SDL_Pathfinding/SDL_Pathfinding/SDL_Pathfinding.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\src\ScenePathFinding.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Algorithm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\SDL_SimpleApp.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Algorithm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
